--- a/less/home-page.less
+++ b/less/home-page.less
@@ -118,11 +118,12 @@
     bottom: 0;
     z-index: 100;
     width: 8%;
-    .flex(space-between, center);
-    color: @main-font-color;
+    min-width: 115px;
     padding: 10px;
     border-radius: 10px 0 0 0;
     border: 1px solid #e0e0e0;
+    color: @main-font-color;
+    .flex(space-between, center);
 
     span {
       font-size: 2rem;
